// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PrimaryToolbar should render desc direction 1`] = `
<Button
  onClick={[Function]}
  variant="plain"
>
  <SortAmountDownIcon
    color="currentColor"
    noVerticalAlign={false}
    size="sm"
  />
</Button>
`;

exports[`PrimaryToolbar should render no data 1`] = `
<Button
  onClick={[Function]}
  variant="plain"
>
  <SortAmountUpIcon
    color="currentColor"
    noVerticalAlign={false}
    size="sm"
  />
</Button>
`;
